Fixed alignment of media tabs.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -448,3 +448,7 @@ form .tabs {
   border: 0;
   margin: 0.25em 0;
 }
+
+.ui-tabs .ui-tabs-nav .ui-tabs-anchor {
+  padding: 0 1em;
+}
